@@ -1,5 +1,8 @@
 Changes between 2.3.4 and 2.3.5dev
 -----------------------------------
+- issue 259 - when assertion rewriting, be consistent with the default
+  source encoding of ASCII on Python 2
+
 - issue 251 - report a skip instead of ignoring classes with init
 
 - issue250 unicode/str mixes in parametrization names and values now works
